# focus_validator

./: .bumpversion.cfg  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  build.py  debug_types.py  fix_dtype_assertions.py  fix_types.py  migrate_failing_tests.py  migrate_tests_to_polars.py  profiling_data_fake_focuses2000.csv  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt  rule_graph_scc_1.dot  rule_graph_scc_2.dot  run_lint_checks.sh  setup.cfg  validation_results_visualizer.py
.github/workflows/: coverage.yaml  lint.yaml  main.yaml  main.yml  publish.yaml  publish_dev.yaml  release.yaml  unittest.yaml
focus/: checks.py  dimension_configurations.py  exceptions.py  format_failure_cases.py  generate_checks.py  main.py
focus/checks/0.5/: FV-D002-0001.yaml  FV-D003-0002.yaml  FV0001.yaml  FV0003.yaml  FV0004.yaml
focus/config_validators/: __init__.py  check_options.py  checks_config.py  override_config.py  version_0_5_config.py
focus/samples/: all_pass.csv  override_config.yaml
focus_validator/: __init__.py  exceptions.py  logging.yaml  main.py  validator.py
focus_validator/config/: logging.yaml
focus_validator/config_objects/: __init__.py  common.py  focus_to_duckdb_converter.py  focus_to_pandera_schema_converter.py  json_loader.py  override.py  plan_builder.py  rule.py  rule_dependency_resolver.py
focus_validator/config_validators/: __init__.py  check_config.py  checks_config.py  data_type_config.py  dimension_value_types.py  override_config.py  validation_config.py  version_0_5_config.py
focus_validator/data_loaders/: csv_data_loader.py  csv_data_loader_pandas_backup.py  data_loader.py  file_mime.py  parquet_data_loader.py
focus_validator/outputter/: outputter.py  outputter_console.py  outputter_unittest.py  outputter_validation_graph.py  outputter_web.py
focus_validator/rules/: .gitignore  checks.py  model-1.2.json  spec_rules.py  spec_rules_loader.py  version_sets.yaml
focus_validator/rules/base_rule_definitions/:  FV-D001.yaml  AmortizedCost_IsDecimal.yaml  AmortizedCost_NotNull.yaml  AmortizedCost_Required.yaml  AvailabilityZone_IsString.yaml  BilledCost_IsDecimal.yaml  (+225 more)
focus_validator/utils/: currency_codes.csv  download_currency_codes.py  download_focus_spec.py  performance_logging.py
samples/: all_pass.csv  fail_charge_type_bad_value.csv  multiple_failure_example_namespaced.csv  multiple_failure_examples.csv  override_config.yaml  sample.parquet
samples/rule_configs/: bad_rule_config_empty_file.yaml  valid_rule_config.yaml  valid_rule_config_column_metadata.yaml  valid_rule_config_dimension_metadata.yaml  valid_rule_config_dimension_metadata_required.yaml  valid_rule_config_required.yaml
tests/: conftest.py  fake_focuses.csv  focus_validator_performance_test.py  test_format_unit_integration.py  test_main_function.py  test_match_check_id_rule_config_file.py  test_or_composite_fix.py  test_performance_profiler.py  test_progressive_performance.py  test_rule_config_load.py  test_spec_rules_unsupported_version.py  test_validate_default_configs.py
tests/attributes/: test_attribute_currency_code.py  test_attribute_currency_type.py  test_attribute_datetime.py  test_attribute_json.py  test_datetime_column_load_from_csv.py
tests/checks/: test_decimal_type_check.py  test_null_value_check.py  test_sql_query_check.py  test_sql_query_check_from_config.py
tests/config_objects/: test_check_friendly_name.py  test_check_type_friendly_name.py  test_column_namespace.py  test_common.py  test_dimension_namespace.py  test_focus_to_duckdb_generators.py  test_friendly_name_in_values_template.py  test_json_loader.py  test_load_bad_rule_config_file.py  test_load_base_rules_only.py  test_plan_builder.py  test_required_column.py  test_required_dimension.py  test_rule.py
tests/data_loaders/: test_csv_data_loader_extended.backup  test_csv_data_loader_extended.py  test_csv_data_loader_extended.py.backup  test_data_loader.py  test_data_loader.py.backup  test_null_value_loader.py  test_parquet_data_loader_extended.py  test_parquet_loader.py  test_resilient_loading_integration.py  test_resilient_loading_integration.py.backup  test_timezone_handling.py
tests/outputter/: test_outputter.py  test_outputter_console.py  test_outputter_unittest.py  test_outputter_validation_graph.py
tests/samples/: all_fail.csv  all_pass.csv  all_pass_0.5.csv  billedCostTest.csv  csv_random_data_generate_at_scale.py  csv_random_data_generator.py  fail_invoice_issuer.csv  listUnitPriceTest.csv
tests/scenarios/: README.md  base_rule_data.json  helper.py  test_allowed_values_casing.py  test_basic_rule.py  test_column_presence.py  test_column_presence_with_applicability.py  test_complex_value_check.py  test_conditional_rules.py  test_distinct_count.py  test_embedded_rule_data.py  test_greater_than_or_equal.py  test_multiple_rules.py  test_national_currency.py  test_not_nullable.py  test_same_value.py  test_type_datetime.py  test_type_decimal.py  test_type_string.py
(+84 files in other folders)
