[tool.poetry]
name = "focus_validator"
version = "2.0.1"
description = "FOCUS spec validator."
authors = []
readme = "README.md"
packages = [{ include = "focus_validator" }]
include = [
]

exclude = [
]

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2"
tabulate = "*"
pyarrow = "*"
pydantic = "^2.12"
pyyaml = "^6.0.3"
requests = "*"
pandera = { version = "^0.26.1" }
multimethod = ">=2.0,<2.1"
sqlglot = "^27.28.1"
numpy = { version = "^1.26"}
pytz = "^2025.2"
pandasql = "^0.7.3"
polars = "^1.34.0"
ddt = "^1.7.1"
duckdb = "^1.4.1"
graphviz = "^0.21"

[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = "^25.9.0" }
polyfactory = "^2.22.3"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
mypy = "^1.18.2"
types-setuptools = "^80.9.0"
types-tabulate = "^0.9.0.3"
pandas-stubs = "^2.3.2"
types-pyyaml = "^6.0.12.11"
types-requests = "^2.31.0.2"
pandera = { version = "^0.26.1", extras = ["mypy"] }
isort = "^7.0.0"
flake8 = "^7.3.0"
pre-commit = "^4.3.0"
bump2version = "^1.0.1"
types-psutil = "^7.0.0.20251001"

[build-system]
requires = ["poetry-core", "pyyaml"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
focus-validator = "focus_validator.main:main"

[tool.coverage.run]
source = ["focus_validator"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod"
]
precision = 1
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
title = "Focus Validator Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"
